# toolkit

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  convoy.py  dockerfile  flake.nix
.github/workflows/: build.yml  build.yml.disabled  tests.yml
codegen/: cpparser.py  cppgen.py  orchestrator.py  parser.py  reflect.py  serialize.py
codegen/cpp/: generator.py  orchestrator.py  parser.py  reflect.py  serialize.py
docs/: Doxyfile
performance/: CMakeLists.txt  main.cpp  requirements.txt
performance/include/perf/: memory.hpp  multiprocessing.hpp  settings.hpp
performance/include/perf/memory/: block_allocator.hpp
performance/perf/: container.cpp  container.hpp  main.cpp  memory.cpp  memory.hpp  multiprocessing.cpp  multiprocessing.hpp  settings.cpp  settings.hpp
performance/scripts/: generate_reports.py  run_interactive_plots.py
performance/src/: main.cpp  memory.cpp  multiprocessing.cpp  settings.cpp
performance/src/memory/: block_allocator.cpp
setup/: build.ini  build.py  cmake_scanner.py
tests/: CMakeLists.txt  data_types.hpp
tests/container/: hashable_tuple.cpp  static_array.cpp
tests/include/tests/: data_types.hpp
tests/memory/: block_allocator.cpp
tests/src/container/: array_view.cpp  buffered_array.cpp  hashable_tuple.cpp  static_array.cpp  storage.cpp
tests/src/memory/: block_allocator.cpp  ptr.cpp  stack_allocator.cpp
tests/src/multiprocessing/: thread_pool.cpp
tests/tests/: data_types.hpp
tests/tests/container/: arena_array.cpp  array.cpp  buffer.cpp  container.cpp  dynamic_array.cpp  dynamic_deque.cpp  hash_map.cpp  hash_set.cpp  hashable_tuple.cpp  hive.cpp  span.cpp  stack_array.cpp  static_array.cpp  static_deque.cpp  storage.cpp  string.cpp  tier_array.cpp  tier_string.cpp  weak_array.cpp
tests/tests/math/: math.cpp  quaternion.cpp  tensor.cpp
tests/tests/memory/: arena_allocator.cpp  block_allocator.cpp  ptr.cpp  stack_allocator.cpp  tier_allocator.cpp
tests/tests/multiprocessing/: chase_lev_deque.cpp  for_each.cpp  mpmc_stack.cpp  task.cpp  thread_pool.cpp
tests/tests/simd/: wide.cpp  wide.hpp  wide_avx.hpp  wide_neon.hpp  wide_sse.hpp
tests/tests/utilities/: hash.cpp  result.cpp
tests/tests/utils/: hash.cpp  result.cpp
toolkit/: CMakeLists.txt
toolkit/include/kit/container/: array.hpp  array_view.hpp  buffered_array.hpp  hashable_tuple.hpp  iarray.hpp  static_array.hpp  static_tensor.hpp  storage.hpp
toolkit/include/kit/core/: alias.hpp  api.hpp  concepts.hpp  core.hpp  literals.hpp  logging.hpp
toolkit/include/kit/interface/: non_copyable.hpp
toolkit/include/kit/logging/: logging.hpp
toolkit/include/kit/memory/: block_allocator.hpp  memory.hpp  ptr.hpp  stack_allocator.hpp
toolkit/include/kit/multiprocessing/: for_each.hpp  foreach.hpp  spin_lock.hpp  spin_mutex.hpp  task.hpp  task_manager.hpp  thread_pool.hpp
toolkit/include/kit/profiling/: clock.hpp  profiler.hpp  timespan.hpp
toolkit/include/kit/utilities/: math.hpp  uuid.hpp
toolkit/kit/container/: hashable_tuple.hpp  static_array.hpp  static_tensor.hpp  storage.hpp
toolkit/kit/core/: alias.hpp  api.hpp  concepts.hpp  literals.hpp  logging.cpp  logging.hpp  pch.cpp
toolkit/kit/memory/: block_allocator.hpp  memory.cpp  memory.hpp  ptr.hpp  stack_allocator.cpp  stack_allocator.hpp
toolkit/kit/multiprocessing/: for_each.hpp  spin_lock.cpp  spin_lock.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  thread_pool.cpp  thread_pool.hpp
toolkit/kit/profiling/: clock.cpp  clock.hpp  macros.hpp  profiler.cpp  timespan.cpp  timespan.hpp  vulkan.hpp
toolkit/kit/utilities/: dimension.hpp  glm.hpp  math.hpp  uuid.hpp
toolkit/src/core/: literals.cpp  logging.cpp  pch.cpp  pch.hpp
toolkit/src/logging/: logging.cpp
toolkit/src/memory/: memory.cpp  stack_allocator.cpp
toolkit/src/multiprocessing/: spin_lock.cpp  spin_mutex.cpp  task.cpp  task_manager.cpp  thread_pool.cpp
toolkit/src/profiling/: clock.cpp  profiler.cpp  timespan.cpp
toolkit/tkit/container/: alias.hpp  arena_array.hpp  arena_bitset.hpp  arena_hive.hpp  array.hpp  bitset.hpp  buffer.hpp  container.hpp  dynamic_array.hpp  dynamic_bitset.hpp  dynamic_deque.hpp  dynamic_hive.hpp  fixed_array.hpp  hash_map.hpp  hash_set.hpp  hashable_tuple.hpp  hive.hpp  span.hpp  stack_array.hpp  stack_bitset.hpp  stack_hive.hpp  static_array.hpp  static_bitset.hpp  static_deque.hpp  static_hive.hpp  static_tensor.hpp  storage.hpp  string.hpp  tier_array.hpp  tier_bitset.hpp  tier_hive.hpp  weak_array.hpp
toolkit/tkit/core/: alias.hpp  api.hpp  concepts.hpp  hash.hpp  literals.hpp  logging.cpp  logging.hpp  pch.cpp  pch.hpp  windows.hpp
toolkit/tkit/math/: hash.hpp  math.hpp  quaternion.hpp  tensor.hpp
toolkit/tkit/memory/: arena_allocator.cpp  arena_allocator.hpp  block_allocator.cpp  block_allocator.hpp  memory.cpp  memory.hpp  ptr.hpp  stack_allocator.cpp  stack_allocator.hpp  tier_allocator.cpp  tier_allocator.hpp
toolkit/tkit/multiprocessing/: chase_lev_deque.hpp  for_each.hpp  mpmc_stack.hpp  mpsc_stack.hpp  spin_lock.cpp  spin_lock.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  thread_pool.cpp  thread_pool.hpp  topology.cpp  topology.hpp
toolkit/tkit/preprocessor/: apply.hpp  narg.hpp  reflection.hpp  system.hpp  utils.hpp
toolkit/tkit/profiling/: clock.cpp  clock.hpp  macros.hpp  timespan.cpp  timespan.hpp  vulkan.hpp
toolkit/tkit/reflection/: reflect.hpp
toolkit/tkit/serialization/: yaml.cpp  yaml.hpp
toolkit/tkit/serialization/yaml/: codec.cpp  codec.hpp  container.hpp  glm.hpp  quaternion.hpp  serialize.hpp  tensor.hpp
toolkit/tkit/simd/: concepts.hpp  utils.hpp  wide.hpp  wide_avx.hpp  wide_neon.hpp  wide_sse.hpp
toolkit/tkit/utilities/: dimension.hpp  glm.hpp  hash.hpp  math.hpp  result.hpp  uuid.hpp
toolkit/tkit/utils/: alias.hpp  bit.hpp  concepts.hpp  debug.cpp  debug.hpp  defer.hpp  dimension.hpp  glm.hpp  hash.hpp  id.hpp  limits.hpp  literals.hpp  logging.cpp  logging.hpp  math.hpp  non_copyable.hpp  optional.hpp  result.hpp  uuid.hpp
